--- a/swag.css
+++ b/swag.css
@@ -1,42 +1,104 @@
+:root {
+  --purple: rgb(123, 31, 162);
+  --violet: rgb(103, 58, 183);
+  --pink: rgb(244, 143, 177);
+}
+
+
 body {
   margin-left: auto;
   margin-right: auto;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background: #1a1616;
   color: white;
-
 }
-
 .importanttext {
   text-align: center;
-  margin: auto;
 }
 
-.skellypic {
-  max-width: 30%;
-  width:25%;
+
+@keyframes scale {
+  from, to {
+    transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+  }
+}
+.skulltime {
+  display: inline-block;
+}
+.magic {
+  background-size: 600%;
+  background: linear-gradient(to right, var(--purple), var(--violet), var(--pink) );
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  white-space: nowrap;
+}
+.skullemoji1 {
+  display: block;
+  position: absolute;
+  transform: translateX(200px) translateY(40px);
+}
+.skullemoji2 {
+  display: block;
+  transform: translateX(-25px) translateY(40px);
 }
 
-.Skeleton-Media{
-    text-align: center;
+.fatskellyhead1 {
+  animation: scale 1s ease forwards infinite;
+  display: block;
+  opacity: 0.7;
+  max-width: 30px;
+  max-height: 30px;
 }
+.fatskellyhead2 {
+  animation: scale 1s ease forwards infinite;
+  display: block;
+  opacity: 0.7;
+  max-width: 30px;
+  max-height: 30px;
+}
+
 
 .fishtime{
     text-align: center;
 }
-
-.bingobng{
-    width:auto; 
-    height:auto;
-}
-
 .fishie{
-    
-    max-height:100%;
+    align-items: center;
+    max-height: 100vh;
+    width: 99vw;
 }
 
-.buttones, .fatty, .die{
-    text-align: center;
-    font-size: larger;
+@keyframes skellybigmode  {
+  from, to {
+    width: var(--widthskeleton);
+    height: var(--heightskeleton);
+  }
+  50% {
+    width: calc(var(--widthskeleton) * 1.2);
+    height: calc(var(--heightskeleton) * 1.2);
+  }
+}
 
+.skellypictures {
+  display: inline-flex;
+  flex-direction: row;
+  justify-content: center;
+  flex-wrap: nowrap;
+}
+.skellypic {
+  --widthskeleton: 33vw;
+  --heightskeleton: 33vw;
+  width: var(--widthskeleton);
+  height: var(--heightskeleton);
+}
+.skellypic:hover{
+  animation: skellybigmode 1s ease;
+}
+.textgeneral {
+  transform: translateY(30px);
+  text-align: center; 
+  font-size: 30px;
 }
