--- a/swag.css
+++ b/swag.css
@@ -2,6 +2,10 @@
   --purple: rgb(123, 31, 162);
   --violet: rgb(103, 58, 183);
   --pink: rgb(244, 143, 177);
+  --hannahfishwidth: 99vw;
+  --hannahfishheight: 100vh;
+  --fishsizewidth: 15vw;
+  --fishsizeheight: 16vh;
 }
 
 
@@ -62,13 +66,105 @@ body {
 }
 
 
+
 .fishtime{
     text-align: center;
 }
+.aquarium {
+  display: flex;
+  position: relative;
+  transform: translateZ(-4px);
+}
+.fish1, .fish2, .fish3 {
+  position: absolute;
+  z-index: 2;
+  width: var(--fishsizewidth);
+  height: var(--fishsizeheight);
+}
+.fish1 {
+  animation: fish1swim 5s ease infinite;
+}
+.fish2 {
+  animation: fish2swim 8s ease infinite;
+}
+.fish3 {
+  animation: fish3swim 20s ease-in-out infinite;
+}
 .fishie{
+    position: absolute;
     align-items: center;
-    max-height: 100vh;
-    width: 99vw;
+    max-height: var(--hannahfishheight);
+    width: var(--hannahfishwidth);
+    left: 0px;
+    top: 0px;
+}
+.fishtime > h2 {
+  text-align: center;
+}
+
+@keyframes fish1swim {
+  from, to {
+    top: calc(var(--hannahfishheight)*0.75);
+    left: calc(var(--hannahfishwidth)*0.05);
+  }
+  50% {
+    top: calc(var(--hannahfishheight)*0.75);
+    left: calc(var(--hannahfishwidth)*0.85);
+  }
+  55%, 90% {
+    transform: scaleX(-1);
+  }
+  95%, 50% {
+    transform: scaleX(1);
+  }
+}
+
+@keyframes fish2swim {
+  from, to {
+    top: calc(var(--hannahfishheight)*0.4);
+    left: calc(var(--hannahfishwidth)*0.73);
+    transform: scaleX(1);
+  }
+  30% {
+    top: calc(var(--hannahfishheight)*0.4);
+    left: calc(var(--hannahfishwidth)*0.33);
+    rotate: 0deg;
+  }
+  35%, 50% {
+    rotate: -20deg;
+  }
+  50% {
+    top: calc(var(--hannahfishheight)*0.65);
+    left: calc(var(--hannahfishwidth)*0.13);
+  }
+  60%, 70% {
+    rotate: 50deg;
+  }
+  70% {
+    top: calc(var(--hannahfishheight)*0.2);
+    left: calc(var(--hannahfishwidth)*-0.001);
+    transform: scaleX(1);
+  }
+  75%, 95% {
+    transform: scaleX(-1);
+  }
+}
+
+@keyframes fish3swim {
+ from, to {
+  top: calc(var(--hannahfishheight)*0.05);
+  left: calc(var(--hannahfishwidth)*0);
+  transform: scaleX(1);
+ }
+ 50% {
+  left: calc(var(--hannahfishwidth)*0.60);
+ }
+ 55%, 90% {
+  transform: scalex(-1);
+ }
+ 95%, 50% {
+  transform: scalex(1);
+ }
 }
 
 @keyframes skellybigmode  {
